@@ -1,3 +1,10 @@
+(27/09/19)
+==========
+
+· Add Games > Revolt for Raspberry Pi.
+
+· Make openMSX script compatible with Raspbian Buster.
+
 (17/09/19)
 ==========
 
